<resources>
    <string name="app_name">Manage App</string>
    <string name="expenses_report">EXPENSES REPORT</string>
    <string name="note">NOTE</string>
    <string name="my_notes">My Notes</string>
    <string name="search_note">Search Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type Note Here</string>
    <string name="palette">Palette</string>
    <string name="pick_color">Pick color</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_m">Team M</string>
    <string name="expenses">Expenses</string>
    <string name="trending">Trending</string>
    <string name="manage_app">Manage App</string>
    <string name="quote">Make your life more convenient!</string>
    <string name="income">Income</string>
    <string name="_0_00">$0.00</string>
    <string name="available">Available:</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="plus">+</string>

</resources>